<resources>
    <string name="pref_camera_storage_title">Storage</string>
    <string name="pref_camera_picturesize_entry_13mp">13MP</string>
    <string name="pref_camera_picturesize_entry_12_8mp">12.8MP</string>
    <string name="pref_camera_picturesize_entry_11_5mp">11.5MP</string>
    <string name="pref_camera_picturesize_entry_9mp">9MP</string>
    <string name="pref_camera_picturesize_entry_7_1mp">7.1MP</string>
    <string name="pref_camera_picturesize_entry_6mpw">6MP (W)</string>
    <string name="pref_camera_picturesize_entry_6_4mp">6.4MP</string>
    <string name="pref_camera_picturesize_entry_4mp">4MP</string>
    <string name="pref_camera_picturesize_entry_2_5mp">2.5MP</string>
    <string name="pref_camera_picturesize_entry_2_4mpw">2.4MP (W)</string>
    <string name="pref_camera_picturesize_entry_2_1mp">2.1MP</string>
    <string name="pref_camera_picturesize_entry_1_5mp">1.5MP</string>
    <string name="pref_camera_picturesize_entry_0_9mpw">0.9MP (W)</string>
    <string name="pref_camera_picturesize_entry_0_7mp">0.7MP</string>
    <string name="pref_camera_picturesize_entry_xga">XGA</string>
    <string name="pref_camera_picturesize_entry_svga">SVGA</string>
    <string name="pref_camera_picturesize_entry_wvga">WVGA</string>
    <string name="pref_camera_focusmode_entry_continuouspicture">Continuous Picture</string>
    <string name="pref_camera_focusmode_entry_continuousvideo">Continuous Video</string>
    <string name="pref_camera_focusmode_entry_extended">Extended</string>
    <string name="pref_camera_focusmode_entry_facedetect">Face Detect</string>
    <string name="pref_camera_focusmode_entry_facepriority">Face Priority</string>
    <string name="pref_camera_focusmode_entry_fixed">Fixed</string>
    <string name="pref_camera_focusmode_entry_portrait">Portrait</string>
    <string name="pref_camera_focusmode_entry_hyperfocal">Hyperfocal</string>
    <string name="pref_camera_scenemode_entry_nightportrait">Night Portrait</string>
    <string name="pref_camera_scenemode_entry_nightindoor">Night Indoor</string>
    <string name="pref_camera_scenemode_entry_supernight">Black Night</string>
    <string name="pref_camera_scenemode_entry_duskdawn">Duskdawn</string>
    <string name="pref_camera_scenemode_entry_candlelight">Candlelight</string>
    <string name="pref_camera_scenemode_entry_fallcolor">Fallcolor</string>
    <string name="pref_camera_scenemode_entry_closeup">Closeup</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_aqua">Aqua</string>
    <string name="pref_camera_scenemode_entry_sports">Sports</string>
    <string name="pref_camera_scenemode_entry_mood">Mood</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_entry_cine">Cine</string>
    <string name="pref_camera_scenemode_entry_oldfilm">Old Film</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steadyphoto</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_backlight">Backlight</string>
    <string name="pref_camera_scenemode_entry_backlightportrait">Backlight Portrait</string>
    <string name="pref_camera_scenemode_entry_document">Document</string>
    <string name="pref_camera_scenemode_entry_barcode">Barcode</string>
    <string name="pref_camera_scenemode_entry_text">Text</string>
    <string name="pref_camera_scenemode_entry_beauty">Beauty</string>
    <string name="pref_camera_scenemode_entry_flowers">Flowers</string>
    <string name="pref_camera_scenemode_entry_whiteboard">Whiteboard</string>
    <string name="pref_camera_scenemode_entry_backgroundblur">Background Blur</string>
    <string name="pref_camera_ultrapixel_title">Ultra Pixel</string>
    <string name="pref_camera_ultrapixel_default">off</string>
    <string name="pref_camera_power_shutter_title">Power Shutter</string>
    <string name="pref_camera_power_shutter_default">off</string>
    <string name="pref_camera_video_stabilization_title">Video Stabilization</string>
    <string name="pref_camera_video_stabilization_default">off</string>
    <string name="pref_camera_touch_to_title">Touch To</string>
    <string name="pref_camera_touch_to_default">1</string>
    <string name="pref_camera_touch_to_snap">Snapshot</string>
    <string name="pref_camera_touch_to_focus">Focus</string>
    <string name="pref_camera_volume_buttons_title">Volume Buttons</string>
    <string name="pref_camera_volume_buttons_default">0</string>
    <string name="pref_camera_volume_buttons_entry_none">None</string>
    <string name="pref_camera_volume_buttons_entry_zoom">Zoom</string>
    <string name="pref_camera_volume_buttons_entry_snap_focus">Snap/Focus</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_entry_auto">Auto</string>
    <string name="pref_camera_iso_entry_isodeblur">Auto (HJR)</string>
    <string name="pref_camera_iso_entry_isosports">Sports</string>
    <string name="pref_camera_iso_entry_isonight">Night</string>
    <string name="pref_camera_iso_entry_isomovie">Movie</string>
    <string name="pref_camera_iso_entry_iso6400">6400</string>
    <string name="pref_camera_iso_entry_iso3200">3200</string>
    <string name="pref_camera_iso_entry_iso1600">1600</string>
    <string name="pref_camera_iso_entry_iso1200">1200</string>
    <string name="pref_camera_iso_entry_iso1000">1000</string>
    <string name="pref_camera_iso_entry_iso800">800</string>
    <string name="pref_camera_iso_entry_iso400">400</string>
    <string name="pref_camera_iso_entry_iso200">200</string>
    <string name="pref_camera_iso_entry_iso100">100</string>
    <string name="pref_camera_iso_entry_iso50">50</string>
    <string name="pref_camera_jpeg_title">JPEG Quality</string>
    <string name="pref_camera_jpeg_default">90</string>
    <string name="pref_camera_jpeg_entry_super">Super</string>
    <string name="pref_camera_jpeg_entry_high">High</string>
    <string name="pref_camera_jpeg_entry_medium">Medium</string>
    <string name="pref_camera_jpeg_entry_low">Low</string>
    <string name="pref_camera_coloreffect_title">Effect</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_emboss">Emboss</string>
    <string name="pref_camera_coloreffect_entry_sketch">Sketch</string>
    <string name="pref_camera_coloreffect_entry_neon">Neon</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red Tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue Tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green Tint</string>
    <string name="pref_camera_coloreffect_entry_washed">Washed</string>
    <string name="pref_camera_coloreffect_entry_vintage_warm">Vintage Warm</string>
    <string name="pref_camera_coloreffect_entry_vintage_cold">Vintage Cold</string>
    <string name="pref_camera_coloreffect_entry_point_blue">Point Blue</string>
    <string name="pref_camera_coloreffect_entry_point_red_yellow">Point Red/Yellow</string>
    <string name="pref_camera_burst_title">Burst Mode</string>
    <string name="pref_camera_burst_default">1</string>
    <string name="pref_camera_focustime_title">Touch-Focus Time</string>
    <string name="pref_camera_focustime_default">5000</string>
    <string name="pref_camera_nohands_title">Hands-Free Shutter</string>
    <string name="pref_camera_nohands_default">0</string>
    <string name="pref_nohands_persistent_title">Persistent Hands-Free</string>
    <string name="pref_nohands_persistent_default">@string/setting_off_value</string>
    <string name="pref_camera_id_title">Choose Camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store Location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_video_quality_title">Video Quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time Lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default">0</string>
    <string name="pref_camera_settings_category">Camera Settings</string>
    <string name="pref_camcorder_settings_category">Camcorder Settings</string>
    <string name="pref_camera_picturesize_title">Picture Size</string>
    <string name="pref_camera_focusmode_title">Focus Mode</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash Mode</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White Balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene Mode</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="pref_video_effect_default">none</string>
    <string name="pref_video_effect_title">Effects</string>
    <string name="filtershow_undo">Undo</string>
    <string name="filtershow_redo">Redo</string>
    <string name="show_history_panel">Show History</string>
    <string name="show_imagestate_panel">Show Image State</string>
    <string name="reset">Reset</string>
    <string name="redeye">Red Eye</string>
    <string name="straighten">Straighten</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="save">Save</string>
    <string name="facelift">Face Glow</string>
    <string name="facetan">Face Tan</string>
    <string name="flip">Flip</string>
    <string name="sharpen">Sharpen</string>
    <string name="crop_tooltip">Drag markers to crop photo</string>
    <string name="flip_tooltip">Drag photo to flip it</string>
    <string name="redeye_tooltip">Tap on red eyes to remove them</string>
    <string name="rotate_tooltip">Drag photo to rotate it</string>
    <string name="straighten_tooltip">Drag photo to straighten it</string>
    <string name="photoeditor_exposure">Exposure effects</string>
    <string name="photoeditor_color">Color effects</string>
    <string name="photoeditor_artistic">Artistic effects</string>
    <string name="photoeditor_fix">Fix up</string>
    <string name="photoeditor_undo">Undo</string>
    <string name="photoeditor_redo">Redo</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
</resources>