<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_flashmode_icons" camera:largeIcons="@array/camera_flashmode_largeicons" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:singleIcon="@drawable/ic_exposure_holo_light" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:singleIcon="@drawable/ic_scn_holo_light" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" camera:largeIcons="@array/whitebalance_largeicons" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_switch_entryvalues" camera:entries="@array/pref_switch_entries" camera:icons="@array/camera_recordlocation_icons" camera:largeIcons="@array/camera_recordlocation_largeicons" />
    <ListPreference camera:title="@string/pref_camera_power_shutter_title" camera:key="pref_power_shutter" camera:defaultValue="@string/pref_camera_power_shutter_default" camera:entryValues="@array/pref_switch_entryvalues" camera:entries="@array/pref_switch_entries" />
    <ListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
    <ListPreference camera:title="@string/pref_camera_focusmode_title" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" />
    <ListPreference camera:title="@string/pref_camera_focustime_title" camera:key="pref_camera_focustime_key" camera:defaultValue="@string/pref_camera_focustime_default" camera:entryValues="@array/pref_camera_focustime_duration_values" camera:entries="@array/pref_camera_focustime_duration_entries" />
    <ListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" />
    <ListPreference camera:title="@string/pref_camera_jpeg_title" camera:key="pref_camera_jpeg_key" camera:defaultValue="@string/pref_camera_jpeg_default" camera:entryValues="@array/pref_camera_jpeg_entryvalues" camera:entries="@array/pref_camera_jpeg_entries" />
    <ListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" />
    <ListPreference camera:title="@string/pref_camera_burst_title" camera:key="pref_camera_burst_key" camera:defaultValue="@string/pref_camera_burst_default" camera:entryValues="@array/pref_camera_burst_mode_values" camera:entries="@array/pref_camera_burst_mode_entries" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:icons="@array/camera_id_icons" camera:largeIcons="@array/camera_id_largeicons" />
    <ListPreference camera:title="@string/pref_camera_scenemode_entry_hdr" camera:key="pref_camera_hdr_key" camera:defaultValue="@string/pref_camera_hdr_default" camera:entryValues="@array/pref_camera_hdr_entryvalues" camera:entries="@array/pref_camera_hdr_entries" />
    <ListPreference camera:title="@string/pref_camera_storage_title" camera:key="pref_camera_storage_key" />
    <IconListPreference camera:title="@string/pref_camera_nohands_title" camera:key="pref_nohands_shutter_key" camera:defaultValue="@string/pref_camera_nohands_default" camera:entryValues="@array/pref_camera_nohands_entryvalues" camera:entries="@array/pref_camera_nohands_entries" camera:largeIcons="@array/camera_nohands_icons" />
    <ListPreference camera:title="@string/pref_nohands_persistent_title" camera:key="pref_nohands_persistent_key" camera:defaultValue="@string/pref_nohands_persistent_default" camera:entryValues="@array/pref_nohands_persistent_entryvalues" camera:entries="@array/pref_nohands_persistent_entries" />
    <ListPreference camera:title="@string/pref_camera_storage_title" camera:key="pref_camera_storage_key" />
    <ListPreference camera:title="@string/pref_camera_volume_buttons_title" camera:key="pref_volume_buttons_key" camera:defaultValue="@string/pref_camera_volume_buttons_default" camera:entryValues="@array/pref_camera_volume_buttons_values" camera:entries="@array/pref_camera_volume_buttons_entries" />
    <ListPreference camera:title="@string/pref_camera_ultrapixel_title" camera:key="pref_camera_ultrapixel_key" camera:defaultValue="@string/pref_camera_ultrapixel_default" camera:entryValues="@array/pref_switch_entryvalues" camera:entries="@array/pref_switch_entries" />
</PreferenceGroup>