<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camcorder_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <ListPreference camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_key" camera:defaultValue="@string/pref_video_quality_default" camera:entryValues="@array/pref_video_quality_entryvalues" camera:entries="@array/pref_video_quality_entries" />
    <IconListPreference camera:title="@string/pref_video_time_lapse_frame_interval_title" camera:key="pref_video_time_lapse_frame_interval_key" camera:defaultValue="@string/pref_video_time_lapse_frame_interval_default" camera:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues" camera:entries="@array/pref_video_time_lapse_frame_interval_entries" camera:singleIcon="@drawable/ic_timelapse_none" />
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_video_flashmode_key" camera:defaultValue="@string/pref_camera_video_flashmode_default" camera:entryValues="@array/pref_camera_video_flashmode_entryvalues" camera:entries="@array/pref_camera_video_flashmode_entries" camera:icons="@array/video_flashmode_icons" camera:largeIcons="@array/video_flashmode_largeicons" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:singleIcon="@drawable/ic_exposure_holo_light" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" camera:largeIcons="@array/whitebalance_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:icons="@array/camera_id_icons" camera:largeIcons="@array/camera_id_largeicons" />
    <IconListPreference camera:title="@string/pref_video_effect_title" camera:key="pref_video_effect_key" camera:defaultValue="@string/pref_video_effect_default" camera:entryValues="@array/pref_video_effect_entryvalues" camera:entries="@array/pref_video_effect_entries" camera:icons="@array/video_effect_icons" camera:largeIcons="@array/video_effect_icons" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_switch_entryvalues" camera:entries="@array/pref_switch_entries" camera:icons="@array/camera_recordlocation_icons" camera:largeIcons="@array/camera_recordlocation_largeicons" />
    <ListPreference camera:title="@string/pref_camera_power_shutter_title" camera:key="pref_power_shutter" camera:defaultValue="@string/pref_camera_power_shutter_default" camera:entryValues="@array/pref_switch_entryvalues" camera:entries="@array/pref_switch_entries" />
    <ListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_video_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" />
    <ListPreference camera:title="@string/pref_camera_jpeg_title" camera:key="pref_camera_video_jpeg_key" camera:defaultValue="@string/pref_camera_jpeg_default" camera:entryValues="@array/pref_camera_jpeg_entryvalues" camera:entries="@array/pref_camera_jpeg_entries" />
    <ListPreference camera:title="@string/pref_camera_storage_title" camera:key="pref_camera_storage_key" />
    <ListPreference camera:title="@string/pref_camera_storage_title" camera:key="pref_camera_storage_key" />
    <ListPreference camera:title="@string/pref_camera_volume_buttons_title" camera:key="pref_volume_buttons_key" camera:defaultValue="@string/pref_camera_volume_buttons_default" camera:entryValues="@array/pref_camera_volume_buttons_values" camera:entries="@array/pref_camera_volume_buttons_entries" />
    <ListPreference camera:title="@string/pref_camera_touch_to_title" camera:key="pref_camera_touch_to_key" camera:defaultValue="@string/pref_camera_touch_to_default" camera:entryValues="@array/pref_camera_touch_to_values" camera:entries="@array/pref_camera_touch_to_entries" />
    <ListPreference camera:title="@string/pref_camera_video_stabilization_title" camera:key="pref_camera_video_stabilization_key" camera:defaultValue="@string/pref_camera_video_stabilization_default" camera:entryValues="@array/pref_switch_entryvalues" camera:entries="@array/pref_switch_entries" />
</PreferenceGroup>